Added SSH public key

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,6 +30,13 @@
      state: permissive
      policy: targeted
   become: True
+- name: Adding ssh key to authorized hosts
+  copy:
+     src: authorized_keys
+     dst: /home/{{ssh_user}}/.ssh/authorized_keys
+     owner: {{ssh_user}}
+     group: {{admin_group}}
+     mode: 0600
 - name: Disable ssh login for root user
   lineinfile:
      dest: "/etc/ssh/sshd_config"
