--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,9 +33,9 @@
 - name: Adding ssh key to authorized hosts
   copy:
      src: authorized_keys
-     dst: /home/{{ssh_user}}/.ssh/authorized_keys
-     owner: {{ssh_user}}
-     group: {{admin_group}}
+     dst: "/home/{{ssh_user}}/.ssh/authorized_keys"
+     owner: "{{ssh_user}}"
+     group: "{{admin_group}}"
      mode: 0600
 - name: Disable ssh login for root user
   lineinfile:
