Add NOPASSWD to administrators group

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,12 @@
      owner: "{{ssh_user}}"
      group: "{{admin_group}}"
      mode: 0600
+- name: Allow '{{ admin_group }}' group to have non password sudo
+    lineinfile:
+       dest: /etc/sudoers
+       state: present
+       insertafter: '^%wheel'
+       line: '%{{ admin_group }} ALL=(ALL) NOPASSWD:ALL'
 - name: Disable ssh login for root user
   lineinfile:
      dest: "/etc/ssh/sshd_config"
